# jenkins-qtray

./: CMakeLists.txt
src/: Task.cc  Task.hh  main.cc
